package behavioural.observer.CA6;

public interface PlayerDataListener {
    void listen(PlayerData data);
}
